# nueva-terra-bot

./: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3564aec13b78_add_messages_table.py
er/: License.txt  Read Me.txt
ia/: readme.txt
nueva_terra/: __main__.py  bot.py  image.py  inter.py  time.py
nueva_terra/db/: messages.py
nueva_terra/exts/: errors.py
nueva_terra/exts/timer/: command.py  initialise.py  loop.py
